bootstrap/rig-system/kustomize/operations-manager/overlays/odcn-production/ingress-rijksapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: operations-manager-rijksapp
  namespace: rig-prd-operations
  annotations:
    cert-manager.io/issuer: letsencrypt-operations-manager
    external-dns.alpha.kubernetes.io/target: router.rijksapp.nl
    haproxy.router.openshift.io/ip_whitelist: 147.181.0.0/16 # ODCN VPN only
    haproxy.router.openshift.io/timeout: "300s"
    haproxy.router.openshift.io/hsts_header: "max-age=31536000;includeSubDomains;preload"
spec:
  rules:
    - host: zad.rijksapp.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: operations-manager
                port:
                  number: 8000
  tls:
    - hosts:
        - zad.rijksapp.nl
      secretName: operations-manager-rijksapp-tls
