bootstrap/rig-system/kustomize/operations-manager/overlays/odcn-production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: operations-manager
  namespace: rig-system
  annotations:
#    haproxy.router.openshift.io/ip_whitelist: 147.181.0.0/16 # ODCN VPN only
    haproxy.router.openshift.io/ip_whitelist: "0.0.0.0/0,::/0"
    haproxy.router.openshift.io/timeout: "600s"
spec:
  rules:
    - host: operations-manager.rig.prd1.gn2.quattro.rijksapps.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: operations-manager
                port:
                  number: 8000
  tls:
    - {}
